[package]
name = "defi-tvl-tacker"
version = "0.1.0"
edition = "2021"

[dependencies]
zephyr-sdk = { version = "0.2.3" }
stellar-strkey = { version = "0.0.8" }
hex = { version = "0.4.3" }
serde = { version = "1", features = ["derive"] }

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
