[package]
name = "testing"
version = "0.1.0"
edition = "2021"

[dependencies]
#zephyr-sdk = { version = "0.1.7" }
zephyr-sdk = { path = "../../../rs-zephyr-sdk/zephyr-sdk" }
stellar-strkey = "0.0.8"

[dev-dependencies]
zephyr-sdk = { path = "../../../rs-zephyr-sdk/zephyr-sdk", features = ["testutils"] }
#zephyr-sdk = { version = "0.1.7", features = ["testutils"] }
tokio = {version = "1.0", features = ["full"]}
ledger-meta-factory = { version = "0.1.1", features = [] }

[dev-dependencies.stellar-xdr]
version = "=20.1.0"
features=["next", "curr", "serde", "base64"]


[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
