[package]
name = "txhash"
version = "0.1.0"
edition = "2021"

[dependencies]
zephyr-sdk = { path = "../../../rs-zephyr-sdk/zephyr-sdk" }
hex = "0.4.3"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
