[package]
name = "zephyr-defi-dashboard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#zephyr-sdk = { version = "0.1.6" }
zephyr-sdk = { path = "../../rs-zephyr-sdk/zephyr-sdk" }
serde = {version = "1.0", features = ["derive"]}
zephyr-blend-dashboards = {path = "../zephyr-blend-mainnet-dashboard"}
stellar-strkey = "0.0.8"
charming-fork-zephyr = "0.3.1"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
