[package]
name = "zephyr-track-all-sac"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#stellar-xdr = { version = "20.0.1", default-features = false, features=["next", "serde", "base64"] }
zephyr-sdk = { version = "0.1.1" }

[lib]
crate-type = ["cdylib"]
doctest = false


[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

