[package]
name = "zephyr-xycloans"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#stellar-xdr = { version = "20.0.1", default-features = false, features=["next", "serde", "base64"] }
zephyr-sdk = { version = "0.1.1" }
hex = "0.4.3"
base64 = "0.21.7"
stellar-strkey = "0.0.8"
sha2 = "0.10.8"

[lib]
crate-type = ["cdylib"]
doctest = false


[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

