[package]
name = "zephyr"
version = "0.1.0"
edition = "2021"

[dependencies]
zephyr-sdk = { version = "0.2.0" }
stellar-strkey = "0.0.8"
ed25519-dalek = ">= 2.1.1"
sha2 = "0.10.7"
urlencoding = "2.1.3"
hex = "0.4.3"
serde = {version="1", features = ["derive"]}

[dev-dependencies]
zephyr-sdk = { version="0.2.0", features = ["testutils"] }
tokio = {version = "1.0", features = ["full"]}
ledger-meta-factory = { version = "0.1.2", features = [] }

[dev-dependencies.stellar-xdr]
version = "=21.2.0"
features=["next", "curr", "serde", "base64"]

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
